# Synthetic_Mirnov

./: .Synthetic_Mirnov.py.swp  .gitignore  .pre-commit-config.yaml  .tCurr_mode_1.dat.swp  .torus_example.py.swp  B_Field_2.nc  B_Field_3.nc  B_Field_4.nc  FAR3D_to_Bnorm.py  M3DC1_to_Bnorm.py  MAGX_Coordinates_CFS.json  README.md  Read_Eqdsk.py  SPARC_Mesh_Test.py  Sandbox.ipynb  Synthetic_Diagnostic_Surface_Current.py  Synthetic_Mirnov.py  Time_dep_Freq.py  b_field2.nc  bfield_1.nc  floops.loc  floops_BN.loc  floops_BN_CFS.loc  floops_BP.loc  floops_BP_CFS.loc  floops_FL.loc  floops_FL_CFS.loc  floops_Flux_Full.loc  floops_Flux_Partial.loc  floops_MIRNOV.loc  floops_MRNV.loc  floops_SL.loc  floops_SL_CFS.loc  gen_MAGX_Coords.py  geqdsk  geqdsk_filament_generator.py  get_Cmod_Data.py  header.py  main.py  noise_Envelope.py  (+16 more)
signal_generation/: .Synthetic_Mirnov.py.swp  .result_8826112.err.swp  Autorrun.sh  FAR3D_to_Bnorm.py  M3DC1_to_Bnorm.py  Read_Eqdsk.py  SPARC_Mesh_Test.py  Synthetic_Diagnostic_Surface_Current.py  Synthetic_Frequency_Scan.py  Synthetic_Mirnov.py  Time_dep_Freq.py  __init__.py  batch_assign_filament.py  batch_run_synthetic_spectrogram.py  filament_sandbox.py  g1051202011.1000  gen_MAGX_Coords.py  gen_mode_evolutions.py  geqdsk_filament_generator.py  get-pip.py  header_signal_generation.py  main.py  oft_in.xml  prep_sensors.py  pyproject.toml  result_10036708.err  result_10036708.out  result_8837177.err  result_8837177.out  result_8837281.out  result_8837296.out  result_8839355.err  result_8839355.out  result_8839376.err  result_8839376.out  (+29 more)
(+225 files in other folders)
