[project]
name = "signal-generation"
version = "0.1.0"
description = "Core signal generation scripts with dependency control"
author = {name = "Rian Chandra", email = "rianc@mit.edu"}
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "freeqdsk>=0.5.2",
    "h5py>=3.14.0",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "matplotlib>=3.10.3",
    "netcdf4>=1.7.2",
    "numpy>=1.26.0",
    "opencv-python>=4.11.0.86",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pyvista>=0.46.3",
    "scipy>=1.16.0",
    "xarray>=2025.7.1",
    "loguru>=0.7.3",
    "sympy>=1.14.0",
    "fire>=0.7.1",
    "dask>=2025.11.0",
    "scikit-image>=0.26.0",
    "mdsthin>=1.6.1",
]


[tool.uv.sources]
openfusiontoolkit = {path = "openfusiontoolkit", editable = true}

[tool.isort]
profile = "black"

[tool.ruff.lint]
ignore = ["E402"]

[tool.hatch.build.targets.wheel]
packages = ["signal_generation"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
